--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Simple React App</title>
+    <script src="https://kit.fontawesome.com/312439657d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
