--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="index.css">
     <title>Simple React App</title>
     <script src="https://kit.fontawesome.com/312439657d.js" crossorigin="anonymous"></script>
   </head>
