--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css">
-    <title>Simple React App</title>
+    <link rel="icon" type="image/gif/png" href="https://s3.amazonaws.com/itunes-images/app-assets/458023433/80793600/458023433-80793600-circularArtwork-300.jpg">
+    <title>SmartSplit</title>
     <script src="https://kit.fontawesome.com/312439657d.js" crossorigin="anonymous"></script>
   </head>
   <body>
