--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/gif/png" href="https://s3.amazonaws.com/itunes-images/app-assets/458023433/80793600/458023433-80793600-circularArtwork-300.jpg">
     <title>SmartSplit</title>
     <script src="https://kit.fontawesome.com/312439657d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/43f1c4700e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
